# udemy-llm-apps

./: README.md  data.jsonl  data_1.jsonl  home.py  pyproject.toml
.devcontainer/: devcontainer.json
pages/: agent.py  function_calling.py  post_x.py  post_x_with_calendar.py  simple_chat.py  tagging.py
